# TestBigHW

cmake-sfml3.0-template-master/: CMakeLists.txt
cmake-sfml3.0-template-master/src/: main.cpp
